syntax = "proto3";

option csharp_namespace = "UpFlux.Gateway.Server.Protos";

package command;

import "google/protobuf/empty.proto";

// Service definition for command communication
service CommandService {
  rpc SendCommand (CommandRequest) returns (google.protobuf.Empty);
}

// Message definitions

message CommandRequest {
  string commandId = 1;
  CommandType commandType = 2;
  repeated string targetDevices = 3;
  string parameters = 4;
}

enum CommandType {
  UNKNOWN = 0;
  ROLLBACK = 1;
  // Other commands will be added here
}
